--- a/that-trial/src/index.css
+++ b/that-trial/src/index.css
@@ -66,3 +66,27 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.container{
+  text-align: center;
+  font-family: arial, sans-serif;
+}
+.display{
+  font-size: 10em;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.btn{
+  width: 150px;
+  height: 50px;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 0px 5px;
+  background-color: aqua;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.btn:hover{
+  background-color: rgba(0, 255, 255, 0.26);
+}
